# fastapi-prometheus-metrics

./: .coverage  .coveragerc  .flake8  .gitignore  .mypy.ini  README.md  pyproject.toml  style.sh
.github/workflows/: ci.yaml
fastapi_prometheus_metrics/: endpoints.py  enums.py  manager.py  middleware.py
tests/: conftest.py  test_endpoints.py  test_manager.py  test_middleware.py
