[tool.poetry]
name = "fastapi-prometheus-metrics"
version = "0.2.2"
description = "utilities for reporting prometheus metrics for incoming http requests"
authors = ["Bink <bink@bink.bink>"]
packages = [
    { include = "fastapi_prometheus_metrics" },
]
[tool.poetry.dependencies]
python = "^3.9"
blinker = "^1.4"
fastapi = "^0.70.1"
prometheus-client = "^0.12.0"
sentry-sdk = "^1.5.10"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
xenon = "^0.8.0"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.16.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = false
lines_between_types = 1
