[tool.poetry]
name = "fastapi-prometheus-metrics"
version = "0.0.0"
description = "utilities for reporting prometheus metrics for incoming http requests"
authors = ["Bink <bink@bink.bink>"]
packages = [
    { include = "fastapi_prometheus_metrics" },
]
[tool.poetry.dependencies]
python = "^3.9"
blinker = "<1.6"
fastapi = "^0.105.0"
prometheus-client = "^0.19.0"
sentry-sdk = "^1.39.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
xenon = "^0.9.1"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"
flake8 = "^6.1.0"
httpx = "^0.25.2"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = false
lines_between_types = 1
